# quickExpense

./: .dockerignore  .env.backup  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  AGENTS_VS_BASELINE_TEST_RESULTS.md  API_QUICK_REFERENCE.md  CACHING_ENHANCEMENT_PLAN.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_CLI_UPLOAD_SUMMARY.md  IMPLEMENTATION_PLAN_API_SECURITY_RATE_LIMITING.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  PRODUCT_UPDATE.md  PR_DESCRIPTION.md  QUICKSTART_TEST.md  RAG_CITATION_FIX_PLAN.md  RAG_OUTPUT_FINDING.md  RAG_STATUS_ANALYSIS.md  README.md  README_OAUTH.md  REDESIGN_PLAN.md  SECURITY_INCIDENT.md  TESTING_GUIDE_BUSINESS_RULES.md  TEST_AGENTS_RAG.md  UI_AGENT_DATA_FIX_PLAN.md  VERIFICATION_GUIDE.md  cleanup_plan.md  config.py  main.py  models.py  oauth_setup.py  pyproject.toml  pyrightconfig.json  quickbooks_client.py  quickexpense-upload-flow.md  receipt-processing-libraries-sanitization.md  (+6 more)
.claude/: settings.local.json
baselines/: baseline_7597_dry.json  baseline_harrods_dry.json  baseline_marriot_dry.json
config/: business_rules.json  business_rules.schema.json  cra_rules.csv
docs/: AGENT_IMPLEMENTATION_STATUS.md  API_REFERENCE.md  CANADIAN_TAX_CONTEXT.md  CLI_IMPLEMENTATION_ROADMAP.md  DEPENDENCIES.md  DOCKER_DEPLOYMENT.md  DOCKER_USAGE.md  ENTITY_AWARENESS_ARCHITECTURE.md  HUGGING_FACE_DEPLOYMENT.md  MANUAL_TESTING_GUIDE.md  MULTI_AGENT_ARCHITECTURE.md  RAG_INTEGRATION_PLAN.md  README.md  UI_IMPLEMENTATION.md  UPDATED_CLI_IMPLEMENTATION_PLAN.md  VERIFICATION_GUIDE.md  app_architecture.md  enhancement_implementation.md  enhancement_implementation_phase_1_summary.md  file_processing_infrastructure.md  hybrid_llm_implementation.md  logging.md  test-agent-upload.md  web-ui-results-improvement.md
documentation/: pdf-support-ticket.md
scripts/: __init__.py  connect_quickbooks_cli.py  debug_rules.py  list_recent_expenses.py  search_vendor_expenses.py  test_agents_with_real_receipts.py  test_business_rules.py  test_business_rules_with_marriott.py  test_integration.py  test_oauth_refresh.py  test_pdf_conversion.py  test_quickbooks_direct.py  test_rag_helper.py  update_tokens.py  verify_expense.py
src/quickexpense/: cli.py  (+2 more)
tests/: README_OAUTH_TESTS.md  conftest.py
(+105 files in other folders)
