[project]
name = "quickexpense"
version = "0.1.0"
description = "A modern FastAPI application for processing and submitting expenses to QuickBooks Online"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "QuickExpense Team", email = "team@quickexpense.com" }
]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.6",
    "pymupdf>=1.23.0",
]

[project.scripts]
quickexpense = "quickexpense.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
    "pyright>=1.1.0",
    "pre-commit>=3.5.0",
    "black>=25.1.0",
    "mypy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quickexpense"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--cov=src/quickexpense",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]

[tool.coverage.run]
source = ["src/quickexpense"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
strict = true
no_implicit_reexport = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
files = ["src", "tests"]
exclude = ["main.py", "config.py", "models.py", "oauth_setup.py", "quickbooks_client.py", "src/quickexpense/services/pdf_converter.py"]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disallow_untyped_defs = false
disable_error_code = ["arg-type", "method-assign", "no-untyped-def", "union-attr"]
